--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "ngrok gateway (expose to the internet)": "ngrok http https://localhost:5173/",
+    "dev": "vite --host",
+    "ngrok gateway (expose to the internet)": "ngrok http --domain=robin-smashing-seriously.ngrok-free.app https://localhost:5173/",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
