--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@twa-dev/sdk": "^7.8.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "classnames": "^2.5.1",
