--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,23 +30,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: "npm"
           cache-dependency-path: "./"
+
       - name: Install dependencies
         run: npm install
+
       - name: Build
+        env:
+          VITE_APP_DOMAIN: ${{ vars.VITE_APP_DOMAIN }}
+          VITE_APP_CLIENT_ID: ${{ vars.VITE_APP_CLIENT_ID }}
+          VITE_API_AUDIENCE: ${{ vars.VITE_API_AUDIENCE }}
+          VITE_API_URL: ${{ vars.VITE_API_URL }}
+          VITE_AUTH_REDIRECT_URL: ${{ vars.VITE_AUTH_REDIRECT_URL }}
+          VITE_LOG_OUT_URL: ${{ vars.VITE_LOG_OUT_URL }}
         run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload dist repository
           path: "./docs"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
